# Mateo

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pyproject.toml  styles.css
.github/workflows/: manual.yml  static.yml
python_game/: __init__.py  __main__.py  game.py  settings.py
src/: gameLogic.mjs  main.js
terrarium-app/: next.config.ts  package-lock.json  package.json
terrarium-app/app/: globals.css  layout.tsx  page.tsx
terrarium-app/components/: ControlSidebar.tsx  TerrariumApp.tsx  TerrariumView.tsx
terrarium-app/hooks/: useEcosystemLogic.ts
terrarium-app/types/: ecosystem.ts
tests/: gameLogic.test.mjs  test_python_game.py
